--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body
 .bg-card
 {
     padding: 10px;
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 10px;
     background: white;
 }
 /* .bg-down-card
